tests/diagnostics/packages/exports/non_public_member/expect.txt
# exit: 1
PACKAGE.coppice:1:11: error: exported symbol 'Token' must be declared public
  exports { Token }
            ^
